Prevent double margin spacing from nested paragraph

--- a/ui/css/module/_listitem.scss
+++ b/ui/css/module/_listitem.scss
@@ -10,6 +10,10 @@
   .list-item-text {
     @include paragraph-with-marker();
   }
+
+  .node-paragraph {
+    margin-bottom: 0;
+  }
 }
 
 .node-paragraph {
